--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Naro's peronal site</title>
+  <title>Dawid Jasper's peronal site</title>
   <style>
     .profile-image {
       width: 200px;
@@ -18,7 +18,7 @@
     <tr>
       <td><img class="profile-image" src="dawid_jasper.jpg" alt="dawid jasper" /></td>
       <td>
-        <h1>naro to koks</h1>
+        <h1>Dawid Jasper</h1>
         <p>
           <em>Founder and CEO of
             <strong> <a href="https://appbrewery.com/" target="_blank">The App brewery</a></strong>
