--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Dawid Jasper's peronal site</title>
-  <style>
-    .profile-image {
-      width: 200px;
-    }
-  </style>
+
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img class="profile-image" src="dawid_jasper.jpg" alt="dawid jasper" /></td>
+      <td><img class="profile-image" src="images/dawid_jasper.jpg" alt="dawid jasper" /></td>
       <td>
         <h1>Dawid Jasper to koks</h1>
         <p>
@@ -36,6 +33,7 @@
     <li>The complete Ios app development bootcmap</li>
     <li>the complete web development bootcamp</li>
   </ul>
+  <hr>
   <h3>Work Experience</h3>
 
   <table>
@@ -57,6 +55,7 @@
 
     </tbody>
   </table>
+  <hr>
   <h3>Skills</h3>
   <table border="1px">
     <tr>
@@ -69,7 +68,7 @@
     </tr>
 
   </table>
-  <hr>
+  <hr />
   <a href="hobbies.html">My hobbies</a>
   <a href="contact.html">Contact me</a>
 </body>
